...

          Padding(
            padding: const EdgeInsets.all(40),
            child: SizedBox(
              height: AppLayout.getHeight(55),
              child: ElevatedButton(
              key: ValueKey('add_to_cart_button'), // Ajoutez cette ligne
                onPressed: () async{
    // Check if the product is in stock
    if (!widget.product.availableInStock || widget.product.stockQuantity == 0) {
      // Product is out of stock, show snackbar
      Get.snackbar(
        'Rupture de stock',
...
          duration: const Duration(seconds: 3),
        );
      } else {
        // Product is not in the cart, add it
        cartController.addProduct(widget.product);
        Get.snackbar(
          'Ajouté au panier',
          '${widget.product.title} ajouté au panier',
          snackPosition: SnackPosition.TOP,
          backgroundColor: Colors.green,
          colorText: Styles.whiteColor,
          duration: const Duration(seconds: 2),
        );
...
