...
              indicatorColor: Styles.textColor,
                  indicatorSize: TabBarIndicatorSize.label,
                  labelColor: Styles.textColor,

           
            tabs: const [
              Tab(text: 'Tous'),
              Tab(text: 'Fruits'),
              Tab(text: 'Légumes'),
              Tab(text: 'Herbes'),
            ],
          ),
      ),
...
